package com.cellularproxy.shared.root

enum class RootAvailabilityStatus {
    Unknown,
    Available,
    Unavailable,
}
